load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["devtools.go"],
    importpath = "streaming_hdp/devtools",
    visibility = ["//visibility:public"],
    deps = ["@com_github_gorilla_websocket//:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["devtools_test.go"],
    importpath = "streaming_hdp/devtools",
    library = ":go_default_library",
)
