load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["test.go"],
    importpath = "streaming_hdp/dom/integration",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["dom_integration_test.go"],
    importpath = "streaming_hdp/dom/integration",
    library = ":go_default_library",
    deps = [
        "//chrome:go_default_library",
        "//dom:go_default_library",
        "@com_github_phayes_freeport//:go_default_library",
    ],
)
