load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["hdpreviews.go"],
    importpath = "streaming_hdp/previews/hdpreviews",
    visibility = ["//visibility:public"],
    deps = [
        "//chrome:go_default_library",
        "//previews/handlerutils:go_default_library",
        "@org_golang_x_net//html:go_default_library",
        "@org_golang_x_net//html/atom:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["hdpreviews_test.go"],
    importpath = "streaming_hdp/previews/hdpreviews",
    library = ":go_default_library",
)
