load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["hdpreviewsproxy.go"],
    importpath = "streaming_hdp/previews/hdpreviews/proxy",
    visibility = ["//visibility:private"],
    deps = [
        "//chrome:go_default_library",
        "//previews/hdpreviews:go_default_library",
    ],
)

go_binary(
    name = "proxy",
    importpath = "streaming_hdp/previews/hdpreviews/proxy",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)
