load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["stream.go"],
    importpath = "streaming_hdp/previews/streaminghdpreviews/stream",
    visibility = ["//visibility:public"],
    deps = [
        "//chrome:go_default_library",
        "//devtools:go_default_library",
        "//dom:go_default_library",
        "//dom/domjson:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["stream_test.go"],
    importpath = "streaming_hdp/previews/streaminghdpreviews/stream",
    library = ":go_default_library",
    deps = [
        "//chrome:go_default_library",
        "//dom/domjson:go_default_library",
    ],
)
