load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["test.go"],
    importpath = "streaming_hdp/previews/streaminghdpreviews/test",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["streaminghdpreviews_proxy_test.go"],
    importpath = "streaming_hdp/previews/streaminghdpreviews/test",
    library = ":go_default_library",
    deps = [
        "//chrome:go_default_library",
        "//previews/streaminghdpreviews:go_default_library",
        "//previews/testutil:go_default_library",
    ],
)
